--- a/src/_base/app-meta.html
+++ b/src/_base/app-meta.html
@@ -1,4 +1,5 @@
 <meta charset="utf-8">
+<meta http-equiv="Cache-control" content="public">
 <meta content="IE=edge" http-equiv="X-UA-Compatible">
 <meta content="width=device-width,initial-scale=1" name="viewport">
 <meta content="Bootstrap, a sleek, intuitive, and powerful mobile first front-end framework for faster and easier web development." name="description">
